force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <description>This is a mirror of the Closing object that is used to share restricted data on sales and commissions without exposing the Closing from Private</description>
    <label>Commission</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Commission  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>