force-app/main/default/objects/Commission__c/fields/Commission_Earned__c.field-meta.xml
<CustomField>
    <fullName>Commission_Earned__c</fullName>
    <label>Commission Earned</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>