force-app/main/default/objects/Commission__c/fields/Listing_Type__c.field-meta.xml
<CustomField>
    <fullName>Listing_Type__c</fullName>
    <formula>Text(Closing__r.Listing_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Type</label>
    <type>Text</type>
</CustomField>