force-app/main/default/objects/Commission__c/fields/Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Value__c</fullName>
    <label>Transaction Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>